# cqrs-account

./: Cargo.toml  Dockerfile  docker-compose.yml
db/: init.sql
examples/: benchmark.rs
kubernetes/: all.yaml
migrations/: 20240924095600_init.up.sql
src/: command_extractor.rs  config.rs  lambda_main.rs  lib.rs  main.rs  queries.rs  route_handler.rs  state.rs
src/account/: aggregate.rs  commands.rs  events.rs  queries.rs
src/domain/: aggregate.rs  commands.rs  events.rs
src/order/: aggregate.rs  commands.rs  events.rs  mod.rs  queries.rs
src/simple/: mod.rs
src/transfer/: aggregate.rs  commands.rs  events.rs  queries.rs
src/util/: mod.rs  transaction_guard.rs  types.rs
