[package]
name = "cqrs-account"
version = "0.4.10"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A demo application for cqrs-es crate."
documentation = "https://docs.rs/cqrs-demo"
repository = "https://github.com/serverlesstechnology/cqrs-demo"
readme = "README.md"
publish = false
default-run = "cqrs-account"

[dependencies]
cqrs-es = "0.4.12"
postgres-es = "0.4.12"

async-trait = "0.1"
axum = "0.7.6"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8.2", features = [ "postgres" , "runtime-tokio-rustls", "json"] }
chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.1"
tower-http = "0.6.0"

thiserror = "1.0.63"
hex = "0.4.3"
futures = "0.3.30"
tracing = "0.1.40"
rand = "0.8.5"
tracing-subscriber = "0.3.18"

[[bin]]
name = "cqrs-account"
path = "src/main.rs"

[[example]]
name = "benchmark"

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
